# ESP32-C3-IIC-OLED

./: .gitignore  CMakeLists.txt  README.md  widget.cc
doc/: class.drawio  game.drawio
inc/: data_map.h  event.h  event_listener.h  layout.h  model.h  object.h  oled.back  page.h  paint.h  string_object.h  types.h  widget.h  window.h
inc/layouts/: absolutely_layout.h  list_layout.h
inc/widgets/: graph_widget.h  image_widget.h  text_widget.h
layouts/: absolutely_layout.cc
main/: CMakeLists.txt  main.cc
main/inc/: animation.h  data_map.h  event.h  event_listener.h  layout.h  model.h  object.h  oled.h  oled_device.h  oled_font.h  page.h  paint.h  types.h  widget.h  window.h
main/inc/layouts/: absolutely_layout.h  list_layout.h
main/inc/widgets/: graph_widget.h  image_widget.h  list_widget.h  text_widget.h
main/src/: event.cc  event_listener.cc  layout.cc  object.cc  oled.cc  page.cc  paint.cc  widget.cc  window.cc
main/src/layouts/: absolutely_layout.cc  list_layout.cc
main/src/widgets/: graph_widget.cc  image_widget.cc  list_widget.cc  text_widget.cc
src/: event.cc  layout.cc  object.cc  oled_device.cc  page.cc  paint.cc  widget.cc  window.cc
src/layouts/: absolutely_layout.cc  list_layout.cc
src/widgets/: graph_widget.cc  image_widget.cc  list_widget.cc  text_widget.cc
widgets/: graph_widget.cc  image_widget.cc
